// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox snapshots should render Checkbox 1`] = `
<DocumentFragment>
  <div
    class="Checkbox"
    data-test-checkbox=""
  >
    <input
      class="Checkbox__input"
      data-test-checkbox-input=""
      type="checkbox"
    />
    <div
      class="Checkbox__input-wrapper"
    />
    <small
      class="Checkbox__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      label
    </small>
  </div>
</DocumentFragment>
`;

exports[`Checkbox snapshots should render when checked 1`] = `
<DocumentFragment>
  <div
    class="Checkbox"
    data-test-checkbox="checkbox"
  >
    <input
      class="Checkbox__input"
      data-test-checkbox-input="checkbox"
      type="checkbox"
    />
    <div
      class="Checkbox__input-wrapper"
    >
      <div
        class="Icon Icon--neutral-1"
        data-test-icon="checkbox"
        height="8"
        name="Checkbox"
        width="8"
      />
    </div>
    <small
      class="Checkbox__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      label
    </small>
  </div>
</DocumentFragment>
`;

exports[`Checkbox snapshots should render when mixed 1`] = `
<DocumentFragment>
  <div
    class="Checkbox"
    data-test-checkbox="checkbox"
  >
    <input
      class="Checkbox__input"
      data-test-checkbox-input="checkbox"
      type="checkbox"
    />
    <div
      class="Checkbox__input-wrapper"
    >
      <div
        class="Icon Icon--neutral-1"
        data-test-icon="checkbox-mixed"
        height="8"
        name="CheckboxMixed"
        width="8"
      />
    </div>
    <small
      class="Checkbox__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      label
    </small>
  </div>
</DocumentFragment>
`;
